# Interacting_Maps

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  README.md
eigen/unsupported/Eigen/src/SpecialFunctions/: SpecialFunctionsHalf.h:Zone.Identifier
include/: Instrumentor.h  InteractingMapsEvents.h  conversions.h  datatypes.h  dv.h  dv_processing.h  events.h  file_operations.h  imaging.h  interacting_maps.h  interacting_maps_double.h  testSIMD.h  update.h  video.h
output/: 101_xtensor  102_reshape  103_index_access  SPEED_sparse_eigen  autodiff  interacting_maps  interacting_maps.out  results.json  speed_blas  speed_blas_test  speed_eigen  speed_eigen_blas  speed_eigen_update_function  speed_sparse_eigen  speed_test  test_autodiff
res/academic_checker/: calib.txt  events.txt
res/academic_translation/: calib.txt  events.txt
res/shapes_rotation/: eventsshort.txt
src/: .gitignore  01_Intro.cpp  02_Matrix_Class.cpp  03_Matrix_Arithmetic.cpp  04_Matrix_Arithmetic2.cpp  05_Arrays.cpp  06_Block_operations.cpp  07_slicing_and_indexing.cpp  08_advanced_init.cpp  09_reductions.cpp  102_reshape.cpp  103_index_access.cpp  10_sparse_matrix_manipulation.cpp  11_sparse_system_solver.cpp  12_tensors.cpp  13_gradient.cpp  14_OMP_Collapse.cpp  15_DV_test.cpp  15_dv-processing_test.cpp  16_dv_accumulator.cpp  CMakeLists.txt  InteractingMapsEvents.cpp  SPEED_LU_blas.cpp  SPEED_LU_eigen.cpp  SPEED_eigen_update_F.cpp  SPEED_sparse_eigen.cpp  autodiff.cpp  autodiff_find_c.cpp  conversions.cpp  events.cpp  file_operations.cpp  imaging.cpp  interacting_maps  interacting_maps.cpp  interacting_maps.h  interacting_maps_double.cpp  pybind11_eigentest.cpp  pybind11_sparse_matrix.cpp  pybind11_sparse_matrix_test.py  pybind11_timeit.py  (+6 more)
src/output/: 01_Intro  02_Matrix_Class  04_Matrix_Arithmetic2  05_Arrays  08_advanced_init.out  09_reductions  10_sparse_matrix_manipulation.out  12_tensors.out
